# tidal-midi-gm

./: README.md  tidal-midi-gm.cabal
Sound/Tidal/MIDI/: GMParams.hs  GMPerc.hs  GMSynth.hs
