name:                tidal-midi-gm
version:             0.8
-- synopsis:
-- description:
homepage:            https://github.com/lvm/tidal-midi-gm
license:             GPL-3
license-file:        LICENSE
author:              Mauro Lizaur
maintainer:          Mauro Lizaur <mauro@sdf.org>
-- copyright:
category:            Sound
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Sound.Tidal.MIDI.GMPerc
  -- other-modules:
  -- other-extensions:
  Build-depends: base < 5, tidal == 0.8, tidal-midi == 0.8, PortMidi == 0.1.6.0, time, containers, transformers
  -- hs-source-dirs:
  default-language:    Haskell2010
